# agent-fleet-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  fleet.yaml.example  pyproject.toml
docs/: architecture.md
examples/: demo-fleet.yaml  quickstart.py
src/agent_fleet/: __init__.py  cli.py  config.py  enroll.py  prompts.py  sandbox.py  tick.py
templates/typescript-bun/: release-please-config.json
templates/typescript-bun/.github/workflows/: ci.yml  claude-review.yml
tests/: conftest.py  test_cli.py  test_config.py  test_conformance.py  test_enroll.py  test_prompts.py  test_sandbox.py  test_security.py  test_tick.py
