[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-fleet"
version = "0.1.0"
description = "Autonomous OSS-repo health for solo maintainers (Python port of @p-vbordei/agent-fleet)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Vlad Bordei", email = "bordeivlad@gmail.com" }]
requires-python = ">=3.10"
keywords = [
  "github", "automation", "oss-maintenance", "agent",
  "renovate", "release-please", "claude", "anthropic",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
agent-fleet = "agent_fleet.cli:app"

[project.urls]
Homepage = "https://github.com/p-vbordei/agent-fleet-py"
Reference = "https://github.com/p-vbordei/agent-fleet"
Issues = "https://github.com/p-vbordei/agent-fleet-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_fleet"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "agent_fleet/_data/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
